--- a/pclviewer.ui
+++ b/pclviewer.ui
@@ -102,6 +102,7 @@
    </attribute>
    <addaction name="action_Open"/>
    <addaction name="action_Save"/>
+   <addaction name="action_Color_Mode"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="action_Open">
@@ -150,6 +151,10 @@
    </property>
   </action>
   <action name="action_Color_Mode">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/resources/Color-icon.png</normaloff>:/resources/Color-icon.png</iconset>
+   </property>
    <property name="text">
     <string>&amp;Color Mode ...</string>
    </property>
