--- a/colordialog.ui
+++ b/colordialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>519</width>
-    <height>277</height>
+    <width>371</width>
+    <height>198</height>
    </rect>
   </property>
   <property name="contextMenuPolicy">
@@ -19,9 +19,9 @@
   <widget class="QGroupBox" name="groupBox_Axis">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>60</y>
-     <width>195</width>
+     <x>190</x>
+     <y>10</y>
+     <width>161</width>
      <height>81</height>
     </rect>
    </property>
@@ -33,7 +33,7 @@
    </property>
    <property name="minimumSize">
     <size>
-     <width>180</width>
+     <width>160</width>
      <height>60</height>
     </size>
    </property>
@@ -50,7 +50,7 @@
     <string notr="true"/>
    </property>
    <property name="title">
-    <string>Color change along axis</string>
+    <string>Color change axis</string>
    </property>
    <property name="flat">
     <bool>true</bool>
@@ -78,7 +78,7 @@
      <widget class="QRadioButton" name="radioButton_x_2">
       <property name="font">
        <font>
-        <pointsize>16</pointsize>
+        <pointsize>10</pointsize>
         <weight>50</weight>
         <bold>false</bold>
        </font>
@@ -95,7 +95,7 @@
      <widget class="QRadioButton" name="radioButton_y_2">
       <property name="font">
        <font>
-        <pointsize>16</pointsize>
+        <pointsize>10</pointsize>
         <weight>50</weight>
         <bold>false</bold>
        </font>
@@ -112,7 +112,7 @@
      <widget class="QRadioButton" name="radioButton_z_2">
       <property name="font">
        <font>
-        <pointsize>16</pointsize>
+        <pointsize>10</pointsize>
         <weight>50</weight>
         <bold>false</bold>
        </font>
@@ -130,9 +130,9 @@
   <widget class="QGroupBox" name="groupBox_ColorMode">
    <property name="geometry">
     <rect>
-     <x>280</x>
-     <y>40</y>
-     <width>230</width>
+     <x>10</x>
+     <y>10</y>
+     <width>161</width>
      <height>180</height>
     </rect>
    </property>
@@ -144,8 +144,8 @@
    </property>
    <property name="minimumSize">
     <size>
-     <width>230</width>
-     <height>180</height>
+     <width>100</width>
+     <height>100</height>
     </size>
    </property>
    <property name="font">
@@ -161,9 +161,15 @@
    <layout class="QVBoxLayout" name="verticalLayout_2">
     <item>
      <widget class="QRadioButton" name="radioButton_BlueRed_2">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
       <property name="font">
        <font>
-        <pointsize>16</pointsize>
+        <pointsize>10</pointsize>
         <weight>50</weight>
         <bold>false</bold>
        </font>
@@ -175,9 +181,15 @@
     </item>
     <item>
      <widget class="QRadioButton" name="radioButton_GreenMagenta_2">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
       <property name="font">
        <font>
-        <pointsize>16</pointsize>
+        <pointsize>10</pointsize>
         <weight>50</weight>
         <bold>false</bold>
        </font>
@@ -189,9 +201,15 @@
     </item>
     <item>
      <widget class="QRadioButton" name="radioButton_WhiteRed_2">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
       <property name="font">
        <font>
-        <pointsize>16</pointsize>
+        <pointsize>10</pointsize>
         <weight>50</weight>
         <bold>false</bold>
        </font>
@@ -203,9 +221,15 @@
     </item>
     <item>
      <widget class="QRadioButton" name="radioButton_GreyRed_2">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
       <property name="font">
        <font>
-        <pointsize>16</pointsize>
+        <pointsize>10</pointsize>
         <weight>50</weight>
         <bold>false</bold>
        </font>
@@ -217,9 +241,15 @@
     </item>
     <item>
      <widget class="QRadioButton" name="radioButton_Rainbow_2">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
       <property name="font">
        <font>
-        <pointsize>16</pointsize>
+        <pointsize>10</pointsize>
         <weight>50</weight>
         <bold>false</bold>
        </font>
@@ -237,8 +267,8 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>230</y>
+     <x>220</x>
+     <y>150</y>
      <width>99</width>
      <height>27</height>
     </rect>
@@ -247,6 +277,10 @@
     <string>&amp;OK</string>
    </property>
   </widget>
+  <zorder>groupBox_Axis</zorder>
+  <zorder>groupBox_ColorMode</zorder>
+  <zorder>pushButton</zorder>
+  <zorder>radioButton_BlueRed_2</zorder>
  </widget>
  <resources/>
  <connections>
