--- a/pclviewer.ui
+++ b/pclviewer.ui
@@ -86,6 +86,7 @@
     </property>
     <addaction name="action_Color_Mode"/>
     <addaction name="action_Triangulation"/>
+    <addaction name="actionTour"/>
    </widget>
    <addaction name="menu_File"/>
    <addaction name="menu_Color_Mode"/>
@@ -104,6 +105,7 @@
    <addaction name="action_Open"/>
    <addaction name="action_Save"/>
    <addaction name="action_Color_Mode"/>
+   <addaction name="actionTour"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="action_Open">
@@ -163,6 +165,11 @@
   <action name="action_Triangulation">
    <property name="text">
     <string>&amp;Triangulation Settings</string>
+   </property>
+  </action>
+  <action name="actionTour">
+   <property name="text">
+    <string>Tour ...</string>
    </property>
   </action>
  </widget>
