--- a/pclviewer.ui
+++ b/pclviewer.ui
@@ -31,13 +31,6 @@
   <widget class="QWidget" name="centralwidget">
    <layout class="QHBoxLayout" name="horizontalLayout_3">
     <item>
-     <widget class="QPushButton" name="pushButton">
-      <property name="text">
-       <string>PushButton</string>
-      </property>
-     </widget>
-    </item>
-    <item>
      <widget class="QVTKWidget" name="qvtkWidget" native="true">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -94,6 +87,7 @@
     <addaction name="action_Color_Mode"/>
     <addaction name="action_Triangulation"/>
     <addaction name="actionTour"/>
+    <addaction name="actionSet_Camera"/>
    </widget>
    <addaction name="menu_File"/>
    <addaction name="menu_Color_Mode"/>
@@ -177,6 +171,11 @@
   <action name="actionTour">
    <property name="text">
     <string>Tour ...</string>
+   </property>
+  </action>
+  <action name="actionSet_Camera">
+   <property name="text">
+    <string>Set Camera ...</string>
    </property>
   </action>
  </widget>
