--- a/resources.qrc
+++ b/resources.qrc
@@ -5,5 +5,6 @@
         <file>resources/Close-icon.png</file>
         <file>resources/About-icon.png</file>
         <file>resources/Color-icon.png</file>
+        <file>resources/Icon-meshes.png</file>
     </qresource>
 </RCC>
