--- a/pclviewer.ui
+++ b/pclviewer.ui
@@ -88,7 +88,7 @@
     <addaction name="action_Triangulation"/>
     <addaction name="actionTour"/>
     <addaction name="actionSet_Camera"/>
-    <addaction name="actionTake_a_Screen_Shot"/>
+    <addaction name="actionSnapshot"/>
    </widget>
    <addaction name="menu_File"/>
    <addaction name="menu_Color_Mode"/>
@@ -106,6 +106,7 @@
    </attribute>
    <addaction name="action_Open"/>
    <addaction name="action_Save"/>
+   <addaction name="actionSnapshot"/>
    <addaction name="action_Color_Mode"/>
    <addaction name="action_Triangulation"/>
    <addaction name="actionTour"/>
@@ -190,9 +191,16 @@
     <string>Set Camera ...</string>
    </property>
   </action>
-  <action name="actionTake_a_Screen_Shot">
+  <action name="actionSnapshot">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/resources/Snapshot.png</normaloff>:/resources/Snapshot.png</iconset>
+   </property>
    <property name="text">
-    <string>Take a Screen Shot</string>
+    <string>Snapshot</string>
+   </property>
+   <property name="statusTip">
+    <string>Click to take a snapshot of the plot.</string>
    </property>
   </action>
  </widget>
