--- a/colordialog.ui
+++ b/colordialog.ui
@@ -40,10 +40,10 @@
   <widget class="QGroupBox" name="groupBox_Axis">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>90</y>
+     <x>10</x>
+     <y>110</y>
      <width>160</width>
-     <height>81</height>
+     <height>61</height>
     </rect>
    </property>
    <property name="sizePolicy">
@@ -320,6 +320,28 @@
    <property name="checked">
     <bool>true</bool>
    </property>
+  </widget>
+  <widget class="QWidget" name="horizontalLayoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>50</y>
+     <width>160</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout_2">
+    <item>
+     <widget class="QLabel" name="label">
+      <property name="text">
+       <string>Point size</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLineEdit" name="lineEdit"/>
+    </item>
+   </layout>
   </widget>
  </widget>
  <resources/>
