--- a/tourdialog.ui
+++ b/tourdialog.ui
@@ -82,7 +82,7 @@
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout_2">
     <item>
-     <widget class="QPushButton" name="pushButton">
+     <widget class="QPushButton" name="pushButtonRec">
       <property name="text">
        <string/>
       </property>
@@ -99,7 +99,7 @@
      </widget>
     </item>
     <item>
-     <widget class="QPushButton" name="pushButton_2">
+     <widget class="QPushButton" name="pushButtonStop">
       <property name="text">
        <string/>
       </property>
