--- a/resources.qrc
+++ b/resources.qrc
@@ -9,5 +9,6 @@
         <file>resources/Snapshot.png</file>
         <file>resources/stop.png</file>
         <file>resources/record.png</file>
+        <file>resources/bun0.pcd</file>
     </qresource>
 </RCC>
