--- a/pcdviewermainwindow.ui
+++ b/pcdviewermainwindow.ui
@@ -61,6 +61,7 @@
      <string>&amp;Help</string>
     </property>
     <addaction name="action_About"/>
+    <addaction name="actionHelpInfo"/>
    </widget>
    <widget class="QMenu" name="menu_Color_Mode">
     <property name="title">
@@ -96,7 +97,7 @@
   <widget class="QStatusBar" name="statusBar"/>
   <action name="action_Open">
    <property name="icon">
-    <iconset resource="resources.qrc">
+    <iconset>
      <normaloff>:/resources/Open-icon.png</normaloff>:/resources/Open-icon.png</iconset>
    </property>
    <property name="text">
@@ -114,7 +115,7 @@
   </action>
   <action name="action_About">
    <property name="icon">
-    <iconset resource="resources.qrc">
+    <iconset>
      <normaloff>:/resources/About-icon.png</normaloff>:/resources/About-icon.png</iconset>
    </property>
    <property name="text">
@@ -123,7 +124,7 @@
   </action>
   <action name="action_Close">
    <property name="icon">
-    <iconset resource="resources.qrc">
+    <iconset>
      <normaloff>:/resources/Close-icon.png</normaloff>:/resources/Close-icon.png</iconset>
    </property>
    <property name="text">
@@ -135,7 +136,7 @@
   </action>
   <action name="action_Save">
    <property name="icon">
-    <iconset resource="resources.qrc">
+    <iconset>
      <normaloff>:/resources/Save-icon.png</normaloff>:/resources/Save-icon.png</iconset>
    </property>
    <property name="text">
@@ -153,7 +154,7 @@
   </action>
   <action name="action_Color_Mode">
    <property name="icon">
-    <iconset resource="resources.qrc">
+    <iconset>
      <normaloff>:/resources/Color-icon.png</normaloff>:/resources/Color-icon.png</iconset>
    </property>
    <property name="text">
@@ -168,7 +169,7 @@
   </action>
   <action name="action_Triangulation">
    <property name="icon">
-    <iconset resource="resources.qrc">
+    <iconset>
      <normaloff>:/resources/Icon-meshes.png</normaloff>:/resources/Icon-meshes.png</iconset>
    </property>
    <property name="text">
@@ -202,7 +203,7 @@
   </action>
   <action name="actionSnapshot">
    <property name="icon">
-    <iconset resource="resources.qrc">
+    <iconset>
      <normaloff>:/resources/Snapshot.png</normaloff>:/resources/Snapshot.png</iconset>
    </property>
    <property name="text">
@@ -218,6 +219,14 @@
     <string>Alt+S</string>
    </property>
   </action>
+  <action name="actionHelpInfo">
+   <property name="text">
+    <string>&amp;Help info ...</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+H</string>
+   </property>
+  </action>
  </widget>
  <customwidgets>
   <customwidget>
@@ -227,8 +236,6 @@
    <container>1</container>
   </customwidget>
  </customwidgets>
- <resources>
-  <include location="resources.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
