--- a/pcdviewermainwindow.ui
+++ b/pcdviewermainwindow.ui
@@ -61,7 +61,6 @@
      <string>&amp;Help</string>
     </property>
     <addaction name="action_About"/>
-    <addaction name="actionHelpInfo"/>
    </widget>
    <widget class="QMenu" name="menu_Color_Mode">
     <property name="title">
@@ -93,11 +92,12 @@
    <addaction name="action_Color_Mode"/>
    <addaction name="action_Triangulation"/>
    <addaction name="actionTour"/>
+   <addaction name="actionHelpInfo"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="action_Open">
    <property name="icon">
-    <iconset>
+    <iconset resource="resources.qrc">
      <normaloff>:/resources/Open-icon.png</normaloff>:/resources/Open-icon.png</iconset>
    </property>
    <property name="text">
@@ -115,7 +115,7 @@
   </action>
   <action name="action_About">
    <property name="icon">
-    <iconset>
+    <iconset resource="resources.qrc">
      <normaloff>:/resources/About-icon.png</normaloff>:/resources/About-icon.png</iconset>
    </property>
    <property name="text">
@@ -124,7 +124,7 @@
   </action>
   <action name="action_Close">
    <property name="icon">
-    <iconset>
+    <iconset resource="resources.qrc">
      <normaloff>:/resources/Close-icon.png</normaloff>:/resources/Close-icon.png</iconset>
    </property>
    <property name="text">
@@ -136,7 +136,7 @@
   </action>
   <action name="action_Save">
    <property name="icon">
-    <iconset>
+    <iconset resource="resources.qrc">
      <normaloff>:/resources/Save-icon.png</normaloff>:/resources/Save-icon.png</iconset>
    </property>
    <property name="text">
@@ -154,7 +154,7 @@
   </action>
   <action name="action_Color_Mode">
    <property name="icon">
-    <iconset>
+    <iconset resource="resources.qrc">
      <normaloff>:/resources/Color-icon.png</normaloff>:/resources/Color-icon.png</iconset>
    </property>
    <property name="text">
@@ -169,7 +169,7 @@
   </action>
   <action name="action_Triangulation">
    <property name="icon">
-    <iconset>
+    <iconset resource="resources.qrc">
      <normaloff>:/resources/Icon-meshes.png</normaloff>:/resources/Icon-meshes.png</iconset>
    </property>
    <property name="text">
@@ -203,7 +203,7 @@
   </action>
   <action name="actionSnapshot">
    <property name="icon">
-    <iconset>
+    <iconset resource="resources.qrc">
      <normaloff>:/resources/Snapshot.png</normaloff>:/resources/Snapshot.png</iconset>
    </property>
    <property name="text">
@@ -236,6 +236,8 @@
    <container>1</container>
   </customwidget>
  </customwidgets>
- <resources/>
+ <resources>
+  <include location="resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
